# quarantania2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NOTES.md  PF.md  TODO.md  config.json  config.lua
include/actions/: Action.h  ActionDefs.h  ActionType.h  MoveAction.h  OpenAction.h
include/ai/: BehaviourFactory.h  BehaviourNodes.h  BehaviourTree.h  EntityTargetingScheme.h
include/components/: AI.h  AIComponent.h  Action.h  ActionComponent.h  Actor.h  ActorComponent.h  All.h  AnimationComponent.h  Collider.h  ColliderComponent.h  Container.h  ContainerComponent.h  Description.h  DescriptionComponent.h  FixedState.h  Item.h  ItemComponent.h  LightingComponent.h  Lockable.h  LockableComponent.h  Openable.h  OpenableComponent.h  PCComponent.h  PositionComponent.h  Render.h  RenderComponent.h  RenderSystem.h  Tags.h  TilePosition.h
include/controllers/: Controller.h  LevelController.h
include/core/: Engine.h
include/db/: RawData.h  ResourceDatabase.h
include/ecs/: ECS.h  Entity.h  System.h
include/engine/: Camera.h  Engine.h  GridFeature.h  InputInterface.h  LuaState.h  Tiles.h
include/game/: Action.h  Action2.h  ActionDefs.h  Actions.h  Actor.h  ActorData.h  ActorModFactory.h  ActorModGroups.h  ActorModifier.h  ActorModifierDefs.h  Animation.h  AnimationQueue.h  Attack.h  AttackDefs.h  Camera.h  Character.h  Combat.h  Component.h  Damage.h  Defines.h  DiceRoll.h  ECS.h  Enemy.h  Engine.h  Entity.h  EntityFactory.h  EnumParse.h  Feat.h  FixedLevelFactory.h  GEvent.h  GEventDefs.h  GSubber.h  GameEvent.h  GameEventDefs.h  GameEventHub.h  GameEventVariant.h  GameParse.h  Grid.h  GridFeature.h  InputInterface.h  (+24 more)
include/graphics/: Cursor.h  CursorManager.h  Primatives.h  RenderInterface.h  RenderObject.h  Renderer.h  Shader.h  Text.h  Texture.h  Window.h
include/resource/: Font.h  Manifest.h  Prefab.h  Resource.h  ResourceManager.h  RoomTemplates.h  Sprite.h  Spritesheet.h  Texture.h  Tiled.h  Window.h
include/state/: DefaultLController.h  GameState.h  InitState.h  LevelController.h  LevelState.h  MenuState.h  OverworldState.h  State.h
include/systems/: AISystem.h  ActorSystem.h  Actors.h  All.h  AnimationSystem.h  Collision.h  CollisionSystem.h  Combat.h  CombatSystem.h  FOV.h  FOVSystem.h  FixedState.h  ItemSystem.h  Message.h  MessageSystem.h  Minimap.h  MinimapSystem.h  ObjectivesSystem.h  Position.h  PositionSystem.h  Render.h  RenderSystem.h  System.h  TurnSystem.cpp  TurnSystem.h  UISystem.h
include/ui/: Background.h  Button.h  CharStatsView.h  ContainerView.h  ContextMenu.h  Controls.h  Defines.h  Dialogs.h  Element.h  EquippedItemsView.h  Label.h  Layout.h  LevelUi.h  MainTabControl.h  Manager.h  MinimapView.h  TextLog.h  TextNode.h  TileHighlight.h  TileHighlights.h  Tooltips.h  UEvent.h  UiManager.h
include/utils/: Assert.h  BBCode.h  Base64.h  Colour.h  Compression.h  Containers.h  GlobalConfig.h  Grid.h  GridUtils.h  IdPool.h  Interpolate.h  Json.h  Logging.h  Math.h  Matrix.h  Memory.h  Random.h  Ranges.h  Rational.h  Splines.h  StringUtils.h  Time.h
resource/: manifest.json
resource/data/: actions.json  creatures.json  creatures_old.json  enemies.json  entities.json  feats.json  items.json  modifiers.json  objects.json  player.json  room_templates.json  rooms.json  starting_chars.json  tiles.json  weapons.json
resource/maps/: ancient_temple.json  arena.json  dawnlike.tsx  dawnlike_objects.tsx  dawnlike_wall.tsx  example.json  example.tmx  example_map.json  kobolds.json  quarantania.tiled-session  redbrand.json  small.json  thistletop.json
resource/ninepatch/: simple-border-solid.json  simple-border.json  simple-border.psd
resource/shaders/: block_colour.frag  no_projection.vert  scene_fadeout.frag  simple_sampler.frag  simple_screenspace.vert  text_sampler.frag
resource/spritesheet/: dawnlike.json  dawnlike_chars.json  dawnlike_items.json  dawnlike_objects.json  dawnlike_wall.json  game-icons.json  game_icons.json  game_ui.json  kenney-roguelike-char.json  kenney-roguelike-tiles.json  tile-ui.json  ui-frames.json
scripts/data/: Actions.lua  Chargen.lua  Creatures.lua  Items.lua  Modifiers.lua
scripts/level/: Actor.lua  Level.lua
scripts/maps/: arena.lua  kobolds.lua
src/: main.cpp
test/: test_bbcode.cpp  test_math.cpp
tools/: texturepacker_convert.py  tilesheet_stitcher.py
(+306 files in other folders)
